--- a/FrontendTemplate/package.json
+++ b/FrontendTemplate/package.json
@@ -15,6 +15,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
+    "react-scroll-to-bottom": "^4.2.0",
+    "socket.io-client": "^4.7.2",
     "styled-components": "^6.1.6"
   },
   "devDependencies": {
